admin/manifests/declarative_app_stack/deploy_api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
    app.kubernetes.io/component: api
    app.kubernetes.io/instance: api
    app.kubernetes.io/name: api
    app.kubernetes.io/part-of: world
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-namespace: world
  name: api
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: api
        deployment: api
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - fe
              topologyKey: kubernetes.io/hostname
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - db
              topologyKey: kubernetes.io/hostname
      containers:
      - envFrom:
        - secretRef:
            name: api-config
        - secretRef:
            name: db-config
        image: quay.io/rdacosta/world_api:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 1
        name: api
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /city?name=Liverpool
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        readOnlyRootFilesystem: true
      terminationGracePeriodSeconds: 30
