admin/manifests/declarative_app_stack/deploy_fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fe
    app.kubernetes.io/component: fe
    app.kubernetes.io/instance: fe
  name: fe
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: fe
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: fe
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - api
              topologyKey: kubernetes.io/hostname
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - db
              topologyKey: kubernetes.io/hostname
      containers:
      - env:
        - name: API_SVC
          valueFrom:
            secretKeyRef:
              key: API_SVC
              name: fe-config
        image: quay.io/rdacosta/world_fe:latest
        imagePullPolicy: IfNotPresent
        name: fe
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
        volumeMounts:
        - mountPath: /opt/app-root/src/config.js
          name: config-js
          subPath: config.js
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
          successThreshold: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        readOnlyRootFilesystem: true
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: config.js
            path: config.js
          name: fe-config
        name: config-js
