admin/manifests/declarative_app_stack/svc_api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
    app.kubernetes.io/component: api
    app.kubernetes.io/instance: api
    app.kubernetes.io/name: api
    app.kubernetes.io/part-of: world
    app.openshift.io/runtime-version: latest
  name: api
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: api
    deployment: api
  sessionAffinity: None
  type: ClusterIP
