admin/manifests/declarative_app_stack/svc_fe.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fe
    app.kubernetes.io/component: fe
    app.kubernetes.io/instance: fe
  name: fe
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: fe
  sessionAffinity: None
  type: ClusterIP
