admin/manifests/declarative_app_stack/route_api.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: api
    app.kubernetes.io/component: api
    app.kubernetes.io/instance: api
    app.kubernetes.io/name: api
    app.kubernetes.io/part-of: world
    app.openshift.io/runtime-version: latest
  name: api
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: api
    weight: 100
  wildcardPolicy: None
